# the-force

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmakeClean  cmakeEclipseDebug  cmakeEclipseRelease
C-the-path-master/: .gitmodules  CMakeLists.txt  README.md
C-the-path-master/Dependencies/: CMakeLists.txt
C-the-path-master/doxygen/: CMakeLists.txt
C4-master/: .gitmodules  LICENSE.txt  README.md
C4-master/include/: C4.h  CMakeLists.txt
C4-master/interfaces/thrift/gen-cpp/: C4.h  C4Admin_server.skeleton.cpp  C4Service_constants.cpp  C4Service_constants.h
C4-master/interfaces/thrift/gen-csharp/cosh/c4/: C4.cs  C4Service.Constants.cs
C4-master/interfaces/thrift/gen-java/com/cosh/c4/thrift/: C4ServiceConstants.java
C4-master/interfaces/thrift/gen-perl/c4/: C4Admin.pm  Constants.pm
C4-master/interfaces/thrift/gen-py/c4/: C4-remote  C4Admin.py  __init__.py  constants.py  ttypes.py
C4-master/interfaces/thrift/gen-rb/: c4.rb  c4_service_types.rb
C4-master/src/: C4.cpp
C4-master/tests/: t_c4_basic.cxx
Debug/: buildIt.sh  cmakeDebug.sh
Path-master/: .gitignore  .gitmodules
Path-master/doxygen/: CMakeLists.txt
Path-master/include/: CMakeLists.txt
Path-master/include/model/: edge.h  vertex.h
Path-master/src/model/: edge.cpp  vertex.cpp
Path-master/tests/: CMakeLists.txt  path_tests.h
Release/: .gitignore  buildIt.sh  cmakeRelease.sh
Zeter-master/: .gitignore  CMakeLists.txt
Zeter-master/doxygen/: Doxyfile.in
Zeter-master/include/: CMakeLists.txt
Zeter-master/include/memory/: arrayObject.h  growthByNextPowerOfTwo.h
Zeter-master/include/synchronization/: lockableElement.h
Zeter-master/src/: CMakeLists.txt
Zeter-master/src/memory/: arrayAllocator.cpp  arrayObject.cpp  growthByNextPowerOfTwo.cpp
Zeter-master/src/synchronization/: lockableElement.cpp
Zeter-master/tests/: zeter_tests.h
commons/: CMakeLists.txt  README.md
commons/doxygen/: CMakeLists.txt  Doxyfile.in
commons/include/: CMakeLists.txt
commons/include/definition/: property.h
commons/include/memory/: arrayAllocator.h  arrayMetaData.h
commons/src/: CMakeLists.txt
commons/src/memory/: arrayMetaData.cpp
commons/tests/: CMakeLists.txt  t_commons_lockableElement.cxx  t_commons_objectPool.cxx  t_zeter_lockableElement.cxx  t_zeter_objectPool.cxx
doxygen/: CMakeLists.txt  Doxyfile.in
graphStore/: CMakeLists.txt
graphStore/include/: CMakeLists.txt  graphStore.h
graphStore/include/manager/: metaManager.h
graphStore/include/model/: edge.h  edgeContainer.h  graphElement.h  pointerContainer.h  vertex.h
graphStore/include/model/policy/: columnStorePropertyPolicy.h  compressedDatePolicy.h  powerEdgePolicy.h  shortCutPolicy.h
graphStore/src/: CMakeLists.txt  graphStore.cpp
graphStore/src/manager/: metaManager.cpp  transactionManager.cpp
graphStore/src/model/: pointerContainer.cpp
graphStore/src/model/policy/: columnStorePropertyPolicy.cpp  compressedDatePolicy.cpp  shortCutPolicy.cpp
graphStore/tests/: graphStore_tests.h  t_graphStore_basic.cxx
graphstore/: CMakeLists.txt
graphstore/Dependencies/: CMakeLists.txt
graphstore/doxygen/: Doxyfile.in
graphstore/include/: pathDb.h
graphstore/include/manager/: transactionManager.h
graphstore/include/model/: edgeContainer.h  graphElement.h
graphstore/src/: CMakeLists.txt  pathDb.cpp
graphstore/src/model/: edgeContainer.cpp  graphElement.cpp
graphstore/tests/: CMakeLists.txt  graphStore_tests.h  t_path_basic.cxx
interfaces/thrift/: The-force_Service.thrift  generate
interfaces/thrift/gen-cpp/: C4.cpp  C4Service_types.cpp  C4Service_types.h  C4_server.skeleton.cpp
interfaces/thrift/gen-csharp/cosh/c4/: C4Admin.cs  NotFoundException.cs
interfaces/thrift/gen-go/C4Service/: c4.go
interfaces/thrift/gen-go/C4Service/c4_admin-remote/: c4_admin-remote.go
interfaces/thrift/gen-java/com/cosh/c4/thrift/: C4.java  C4Admin.java  InvalidRequestException.java  NotFoundException.java
interfaces/thrift/gen-perl/c4/: Types.pm
interfaces/thrift/gen-py/c4/: C4Admin-remote
interfaces/thrift/gen-rb/: c4_admin.rb
propertyStore/: .gitignore  CMakeLists.txt
propertyStore/include/: CMakeLists.txt  Propertystore.h  propertyStore.h
propertyStore/src/: CMakeLists.txt  Propertystore.cpp  Propertystore.tpp  propertyStore.cpp  propertyStore.tpp
propertyStore/tests/: CMakeLists.txt  c4_tests.h  propertyStore_tests.h  t_propertyStore_basic.cxx
propertystore/: CMakeLists.txt
propertystore/Dependencies/: CMakeLists.txt
propertystore/doxygen/: CMakeLists.txt  Doxyfile.in
propertystore/include/: CMakeLists.txt
propertystore/interfaces/thrift/: C4Service.thrift
propertystore/interfaces/thrift/gen-cpp/: C4Admin.cpp  C4Admin.h
propertystore/interfaces/thrift/gen-csharp/cosh/c4/: InvalidRequestException.cs
propertystore/interfaces/thrift/gen-go/C4Service/: c4_admin.go  constants.go  ttypes.go
propertystore/interfaces/thrift/gen-go/C4Service/c4-remote/: c4-remote.go
propertystore/interfaces/thrift/gen-perl/c4/: C4.pm
propertystore/interfaces/thrift/gen-py/c4/: C4.py
propertystore/interfaces/thrift/gen-rb/: c4_service_constants.rb
propertystore/src/: C4.tpp  CMakeLists.txt
src/: demo.cxx
startup/: the-force.cpp
