PROJECT(GRAPHSTORE)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES (${PROPERTYSTORE_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROPERTYSTORE_BINARY_DIR})

INCLUDE_DIRECTORIES (${COMMONS_SOURCE_DIR}/include)
LINK_DIRECTORIES(${COMMONS_BINARY_DIR})

ADD_SUBDIRECTORY(src build-src)
ADD_SUBDIRECTORY(tests build-tests)
ADD_SUBDIRECTORY(include build-include)
