INCLUDE_DIRECTORIES(../include/)

SET(PROPERTYSTORE_SRC ${C4_SRC}
  Propertystore.cpp
  Propertystore.tpp
)

ADD_LIBRARY(PROPERTYSTORE ${PROPERTYSTORE_SRC})
TARGET_LINK_LIBRARIES(PROPERTYSTORE COMMONS ${Boost_LIBRARIES})

INSTALL(TARGETS PROPERTYSTORE
        RUNTIME DESTINATION bin
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        )

