MACRO(PROPERTYSTORE_TEST name)
        ADD_EXECUTABLE(${name} ${name}.cxx)
        TARGET_LINK_LIBRARIES(${name}  PROPERTYSTORE)
        ADD_TEST(${name} ${name})
ENDMACRO(PROPERTYSTORE_TEST name)

INCLUDE_DIRECTORIES(../include/)
INCLUDE_DIRECTORIES(../src/)

PROPERTYSTORE_TEST(t_propertyStore_basic)
